--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Polyfill for requestIdleCallback (Safari, older browsers) - must run before any other scripts -->
+    <script>
+      if (!window.requestIdleCallback) {
+        window.requestIdleCallback = function(cb) {
+          var start = Date.now();
+          return setTimeout(function() {
+            cb({
+              didTimeout: false,
+              timeRemaining: function() {
+                return Math.max(0, 50 - (Date.now() - start));
+              }
+            });
+          }, 1);
+        };
+        window.cancelIdleCallback = function(id) {
+          clearTimeout(id);
+        };
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
